--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.1",
     "extract-text-webpack-plugin": "^2.1.0",
-    "fb": "^2.0.0",
     "grunt": "^1.0.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -28,6 +27,7 @@
     "ts-loader": "^2.0.1",
     "tslint": "^4.5.1",
     "tslint-eslint-rules": "^3.4.0",
+    "twitter-node-client": "0.0.6",
     "typescript": "^2.0.3",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.5.1"
