--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/big.js": "0.0.31",
     "@types/dojo": "^1.9.35",
+    "@types/facebook-js-sdk": "^2.8.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.1",
     "extract-text-webpack-plugin": "^2.1.0",
