--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "skipLibCheck": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "exclude": [
     "dist/",
