--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "fb": "^2.0.0"
+    "fb": "^2.0.0",
+    "net": "^1.0.2",
+    "tls": "0.0.1"
   }
 }
