commit Real time count

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,9 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "strictNullChecks": true
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true
   },
   "exclude": [
     "dist/",
